bisonc++ (4.09.02) 

  * Wilko Kuiper reported an annoying bug in the skeleton lex.in, causing the
    compilation of parser.ih to fail. This release fixes that bug.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Mon, 28 Jul 2014 16:46:35 +0200

bisonc++ (4.09.01) 

  * $#$#@ !! Forgot to update the help-info (bisonc++ --help) to reflect the
    new -D option. Now fixed.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Sun, 11 May 2014 09:05:48 +0200

bisonc++ (4.09.00) 

  * Added option --no-decoration (-D), suppressing the actions that are
    normally associated with matched rules.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Sat, 10 May 2014 11:58:46 +0200

bisonc++ (4.08.01) 

  * Members of the class `Generator' generating a substantial amount of code
    now read skeleton files instead of strings which are defined in these
    functions' bodies.

  * Added new skeleton files for the abovementioned functions. The names of
    these skeleton files are identical to the matching filenames in
    generator/, but use extensions `.in'

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Mon, 31 Mar 2014 11:45:41 +0200

bisonc++ (4.08.00) 

  * std::shared_ptr doesn't slice: virtual ~Base() and dynamic_casts removed
    from the generated parserbase.h files

  * %polymorphicimpl removed from skeleton/bisonc++, matching files from
    Generator 

  * The implementation of polymorphic semantic values was simplified.  Const
    members were removed from polymorphic semantic value classes; ReturnType
    get<Tag__>() const and ReturnType data<Tag__>() const are no longer
    required and were removed.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Sun, 02 Mar 2014 11:51:38 +0100

bisonc++ (4.07.02) 

  * Changed 'class SType into struct SType in skeletons/polymorphic, since all
    its members are public anyway.

  * Class header and class implementation header files are no longer
    overwritten at bisonc++ runs.

  * Running './build program' no longer by default uses -g (see INSTALL.im)