@@ -1,4 +1,4 @@
-// Generated by Bisonc++ V4.09.02 on Mon, 23 Mar 2015 20:39:22 +0100
+// Generated by Bisonc++ V4.09.02 on Tue, 24 Mar 2015 11:59:50 +0100
 
 // $insert class.ih
 #include "parser.ih"
@@ -1255,8 +1255,8 @@ SR__ s_139[] =
     { {      59}, { 112} }, // ';'                          
     { {      44}, { 154} }, // ','                          
     { { _error_}, { -10} }, // _error_                      
-    { {     258}, { -10} }, // BASECLASS_PREINCLUDE         
     { {     257}, { -10} }, // BASECLASS_HEADER             
+    { {     258}, { -10} }, // BASECLASS_PREINCLUDE         
     { {     260}, { -10} }, // CLASS_HEADER                 
     { {     261}, { -10} }, // CLASS_NAME                   
     { {     262}, { -10} }, // DEBUGFLAG                    
